--- a/package.json
+++ b/package.json
@@ -263,6 +263,7 @@
     "electron-log": "^2.2.17",
     "electron-updater": "^4.0.6",
     "history": "^4.7.2",
+    "pre-commit": "^1.2.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
